[package]
name = "stedy"
description = "Easy-to-use primitives for modern cryptographic protocols"
version = "1.0.0-beta.2"
license = "Unlicense"
authors = ["Christoffer Carlsson <cc@christoffercarlsson.se>"]
edition = "2021"
keywords = [
    "cryptography",
    "primitives",
    "encryption",
    "signatures",
    "hashing"
  ]
repository = "https://github.com/christoffercarlsson/stedy"

[dependencies]
getrandom = { version = "0.2.15", default-features = false, optional = true }

[features]
default = ["getrandom"]
getrandom = ["dep:getrandom"]
