[package]
name = "stedy"
description = "Easy-to-use primitives for modern cryptographic protocols"
version = "1.0.0-beta.3"
license = "Unlicense"
authors = ["Christoffer Carlsson <cc@christoffercarlsson.se>"]
edition = "2021"
keywords = [
    "cryptography",
    "primitives",
    "encryption",
    "signatures",
    "hashing"
  ]
repository = "https://github.com/christoffercarlsson/stedy"

[[bench]]
name = "stedy"
harness = false

[dependencies]
getrandom = { version = "0.2.15", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.7.0"

[features]
default = ["getrandom"]
getrandom = ["dep:getrandom"]
