[package]
name = "stedy"
description = "Easy-to-use primitives for modern cryptographic protocols"
version = "1.0.0-beta.4"
license = "Unlicense"
authors = ["Christoffer Carlsson <cc@christoffercarlsson.com>"]
edition = "2021"
keywords = [
    "cryptography",
    "primitives",
    "encryption",
    "signatures",
    "hashing"
  ]
repository = "https://github.com/christoffercarlsson/stedy"

[lib]
name = "stedy"

[[bench]]
name = "stedy"
harness = false

[dev-dependencies]
criterion = "0.7.0"
