[package]
name = "stedy"
description = "Easy-to-use primitives for modern cryptographic protocols"
version = "0.23.0"
license = "Unlicense"
authors = ["Christoffer Carlsson <cc@christoffercarlsson.se>"]
edition = "2021"
keywords = [
    "cryptography",
    "primitives",
    "encryption",
    "signatures",
    "hashing"
  ]
repository = "https://github.com/christoffercarlsson/stedy"

[lib]
name = "stedy"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.5.4", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["rand_core", "alloc"] }
crypto_box = { version = "0.9.1", default-features = false, features = ["alloc", "chacha20"] } 
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core", "zeroize"] }
hkdf = "0.12.4"
hmac = "0.12.1"
js-sys ={ version = "0.3.70", optional = true }
pbkdf2 = "0.12.2"
rand_core = "0.6.4"
scrypt = { version = "0.11.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
shamirsecretsharing = { version = "0.1.5", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = "1.8.1"

[dev-dependencies]
rand = "0.8.5"

[features]
web = ["dep:js-sys"]
